WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165066
Fix exception scope verification failures in ReflectObject.cpp.
https://bugs.webkit.org/show_bug.cgi?id=165066
Summary
Fix exception scope verification failures in ReflectObject.cpp.
Mark Lam
Reported
2016-11-24 09:26:04 PST
Patch coming.
Attachments
proposed patch.
(7.24 KB, patch)
2016-11-24 09:31 PST
,
Mark Lam
mark.lam
: review-
Details
Formatted Diff
Diff
proposed patch.
(4.62 KB, patch)
2016-11-25 14:19 PST
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-11-24 09:31:53 PST
Created
attachment 295416
[details]
proposed patch.
Mark Lam
Comment 2
2016-11-24 13:37:24 PST
Comment on
attachment 295416
[details]
proposed patch. It is invalid to replace returning encodedJSValue() with returning { }. On 32-bit builds, the former is non-zero, while the latter is 0. Will fix this patch.
Mark Lam
Comment 3
2016-11-25 14:19:09 PST
Created
attachment 295431
[details]
proposed patch.
Mark Lam
Comment 4
2016-11-28 14:15:26 PST
Thanks for the review. Landed in
r209015
: <
http://trac.webkit.org/r209015
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug