Fix exception scope verification failures in ReflectObject.cpp. https://bugs.webkit.org/show_bug.cgi?id=165066

Reviewed by Saam Barati.

* runtime/ReflectObject.cpp:
(JSC::reflectObjectConstruct):
(JSC::reflectObjectDefineProperty):
(JSC::reflectObjectEnumerate):
(JSC::reflectObjectGet):
(JSC::reflectObjectGetOwnPropertyDescriptor):
(JSC::reflectObjectGetPrototypeOf):
(JSC::reflectObjectOwnKeys):
(JSC::reflectObjectSet):



Canonical link: https://commits.webkit.org/182721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209015 268f45cc-cd09-0410-ab3c-d52691b4dbfc